# vendor_goodix

./: LICENSE  OAT.xml  README.en.md  README.md
goodix/gr5515_sk/: BUILD.gn  config.json
goodix/gr5515_sk/hals/utils/sys_param/: hal_sys_param.c
goodix/gr5515_sk/hals/utils/token/: hal_token.c
goodix/gr5515_sk/user/: BUILD.gn  user_main.c
goodix/gr5515_sk/user/source_set/: BUILD.gn  user_source.c  user_source.h
goodix/gr5515_sk/user/static_library/: BUILD.gn  user_library.c  user_library.h
gr5515_sk/: bin_create.py
gr5515_sk/user/source_set/: user_source.h
gr5515_sk_iotlink_demo/: BUILD.gn  config.json  ohos.build  patch.yml
gr5515_sk_iotlink_demo/ble_template/: BUILD.gn  app_callback.h  example.c
gr5515_sk_iotlink_demo/ble_template/user_app/: user_app.c  user_app.h
gr5515_sk_iotlink_demo/ble_template/user_callback/: user_gap_callback.c  user_gatt_common_callback.c  user_gattc_callback.c  user_l2cap_callback.c  user_sm_callback.c
gr5515_sk_iotlink_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c  vendor.para
gr5515_sk_iotlink_demo/hals/utils/token/: BUILD.gn  hal_token.c
gr5515_sk_iotlink_demo/hdf_config/: BUILD.gn
gr5515_sk_iotlink_demo/kernel_configs/: debug.config
gr5515_sk_iotlink_demo/patches/: 0001-fix-bugs-based-on-master.patch
gr5515_sk_xts_demo/: BUILD.gn  config.json  ohos.build  patch.yml
gr5515_sk_xts_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
gr5515_sk_xts_demo/hals/utils/token/: BUILD.gn
gr5515_sk_xts_demo/hdf_config/: BUILD.gn  hdf.hcs
gr5515_sk_xts_demo/kernel_configs/: debug.config
gr5515_sk_xts_demo/patches/: 0001-fix-bugs-based-on-master.patch
gr5515_sk_xts_demo/tests/: BUILD.gn
gr5515_sk_xts_demo/tests/drivers/: BUILD.gn  driver_test.c  driver_test.h  gpio_test.c  uart_test.c
gr5515_sk_xts_demo/tests/fs/: BUILD.gn  fs_test.c
gr5515_sk_xts_demo/tests/hello_demo/: BUILD.gn  main.c
gr5515_sk_xts_demo/tests/hello_demo/src/: main.c
gr5515_sk_xts_demo/tests/shell/: BUILD.gn  shell_test.c
