# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//build/lite/config/component/lite_component.gni")

executable("application.elf") {
    configs += [ ]
    deps = [
        "//build/lite:ohos",
        "//device/goodix/gr551x:gr551x",
    ]
}

action("image") {
    script = "//device/goodix/gr551x/tools/bin_create.py"
    outputs = [ "$root_build_dir/bin/application.bin","$root_build_dir/bin/application.lst" ]
    args = [
        rebase_path("$root_build_dir/unstripped/bin/application.elf"),
        rebase_path(outputs[0]),
        rebase_path(outputs[1]),
    ]
    deps = [
        ":application.elf",
    ]
}

group("gr5515_sk_iotlink_demo") {    
}