# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")

# Set firmware name
fw_img_name = "application"

executable("${fw_img_name}.elf") {
  deps = [
    "tests:drivers",
    "tests:fs_test",
    "tests:ohosdemo",
    "tests:shell_test",
    "//build/lite:ohos",
  ]

  ldflags = [
    "-Wl,--whole-archive",

    # "-lfs_test",
    # "-ldrivers_test",
    # "-lapp_hello",
    "-lshell_test",
    "-lhctest",
    "-lmodule_ActsBootstrapTest",
    "-lmodule_ActsWifiIotTest",

    # "-lmodule_ActsUtilsFileTest",

    #    "-lmodule_ActsKvStoreTest",
    #    "-lmodule_ActsParameterTest",
    "-lmodule_ActsSamgrTest",
    "-lhuks_test_common",
    "-lmodule_ActsHuksHalFunctionTest",
    "-lmodule_ActsDfxFuncTest",
    "-lmodule_ActsUpdaterFuncTest",
    "-lmodule_ActsHieventLiteTest",
    "-Wl,--no-whole-archive",
  ]
}

action("image") {
  script = "//device/soc/$device_company/gr551x/tools/bin_create.py"
  outputs = [
    "$root_build_dir/${fw_img_name}.bin",
    "$root_build_dir/${fw_img_name}.lst",
  ]
  args = [
    rebase_path("$root_build_dir/unstripped/bin/${fw_img_name}.elf"),
    rebase_path(outputs[0]),
    rebase_path(outputs[1]),
  ]
  deps = [ ":${fw_img_name}.elf" ]
}

group("gr5515_sk_xts_demo") {
}
