import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//build/lite/config/component/lite_component.gni")


executable("application.elf") {
    ldflags = ["-fno-stack-protector"]
    configs += [ ]
    deps = [
        "//build/lite:ohos",
        "//device/goodix/gr551x:gr551x",
    ]
}


action("image") {
    script = "bin_create.py"
    outputs = [ "$root_build_dir/bin/application.bin","$root_build_dir/bin/application.lst" ]
    args = [
        rebase_path("$root_build_dir/bin/application.elf"),
        rebase_path(outputs[0]),
        rebase_path(outputs[1]),
    ]
    deps = [
        ":application.elf",
    ]
}

group("gr5515_sk") {
    # deps = [":image"]
}
