# Copyright (c) 2021 GOODIX.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

drivers_path = "//device/soc/goodix/gr551x/drivers"

import("//device/board/goodix/${board_name}/liteos_m/config.gni")
import("${drivers_path}/drivers.gni")

static_library("drivers_test") {
  sources = [
      "driver_test.c",
   ]

  if (hdf_drivers_gpio_enable) {
    sources += [ "gpio_test.c" ]
  }

  if (hdf_drivers_uart_enable) {
    sources += [ "uart_test.c" ]
  }

  cflags = board_cflags

  include_dirs = board_include_dirs
  include_dirs += [
    "//kernel/liteos_m/kernel/arch/include",
  ]

  include_dirs += [
    "//drivers/peripheral/base",
    "//kernel/liteos_m/kal/cmsis",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
  ]
}

