import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//build/lite/config/component/lite_component.gni")

source_set("user_source") {

    sources = [
        "user_source.c"
    ]
    
    include_dirs = [
        "."
    ]
    # the private defines for this module
    defines = [
        "CN_MODULENAME=\"UserSource\""    
    ]
}